--- a/partials/contact-us.html
+++ b/partials/contact-us.html
@@ -20,7 +20,7 @@
     <div class="modal-contact">
         <button type="button" class="close-button">
             <svg width="18" height="18" class="icon-x">
-                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                <use href="../images/symbol-defs.svg#icon-x-contact"></use>
             </svg>
         </button>
         <div>
