--- a/styles/styles-modal-contact.css
+++ b/styles/styles-modal-contact.css
@@ -4,10 +4,15 @@
 }
 
 :root {
+    --brand-color: #e86f54;
+    --brand-color-hover: #e25b41;
+    --brand-color-focus: #fa6f54;
+    --black: #000000;
+    --white: #ffffff;
+    --error-state: #e74a3b;
+    --correct-state: #3cbc81;
     --grey:#5C5C5C;
     --milk:#D7D7D7;
-
-
 }
 .modal-contact {
     width: 100%;
