--- a/styles/styles-modal-contact.css
+++ b/styles/styles-modal-contact.css
@@ -99,6 +99,7 @@
     font-size: 14px;
     font-weight: 600;
     margin-top: 10px;
+    cursor: pointer;
 }
 .button-send:active {
     background-color: var(--brand-color);
