--- a/css/styles-modal-contact.css
+++ b/css/styles-modal-contact.css
@@ -112,7 +112,33 @@
 }
 
 @media screen and (min-width: 768px) {
-
+    .modal-contact {
+        max-width: 480px;
+        height: 511px;
+        padding: 48px 32px;
+    }
+    .title-contact {
+        font-size: 32px;
+        margin-bottom: 24px;
+    }
+    .legend {
+        font-size: 16px;
+        margin-bottom: 32px;
+    }
+    .label {
+        font-size: 14px;
+    }
+    .input {
+        font-size: 14px;
+        padding: 16px;
+        margin-bottom: 24px;
+    }
+    .button-send {
+        max-width: 416px;
+        padding: 14px;
+        height: 50px;
+        font-size: 18px;
+    }
 }
 @media screen and (min-width: 1158px) {
 
