--- a/css/styles-modal-contact.css
+++ b/css/styles-modal-contact.css
@@ -2,6 +2,13 @@
     margin: 0;
     padding: 0;
 }
+body {
+    font-family: "Montserrat", sans-serif;
+    color: var(--black);
+}
+body {
+    background-color: #3cbc81;
+}
 
 :root {
     --brand-color: #e86f54;
@@ -28,6 +35,7 @@
     padding: 28px 16px;
 }
 
+
 .close-button {
     fill: var(--black);
     background-color: transparent;
@@ -37,14 +45,14 @@
     height: 18px;
     cursor: pointer;
     top: 16px;
-    right: 16px;
+    right: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .icon-x {
-    fill: currentColor
+    fill: currentColor;
 }
 .title-contact {
     font-size: 20px;
@@ -139,7 +147,14 @@
         height: 50px;
         font-size: 18px;
     }
-}
-@media screen and (min-width: 1158px) {
-
+    .icon-x {
+        padding: 0;
+        width: 24px;
+    }
+    .close-button {
+        width: 24px;
+        height: 24px;
+        top: 24px;
+        right: 18px;
+    }
 }
