--- a/partials/contact-us.html
+++ b/partials/contact-us.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-    <div class="modal-contact">
-        <button type="button" class="close-button">
+    <div class="modal-contact display-one">
+        <button type="button" class="close-button-modal">
             <svg width="18" height="18" class="icon-x">
-                <use href="../images/symbol-defs.svg#icon-x-contact"></use>
+                <use href="../src/images/symbol-defs.svg#icon-x-contact"></use>
             </svg>
         </button>
         <div>
@@ -40,6 +40,20 @@
                 </div>
                 <button class="button-send" type="submit">Send</button>
             </form>
+        </div>
+    </div>
+    <div class="modal-contact display-two">
+        <button type="button" class="close-button-modal">
+            <svg width="18" height="18" class="icon-x">
+                <use href="../src/images/symbol-defs.svg#icon-x-contact"></use>
+            </svg>
+        </button>
+        <div>
+            <picture class="img-thankyou">
+                <img src="../src/images/thankyou.jpg" srcset="../src/images/thankyou2x.jpg"
+                    alt="orange plants abstraction"/>
+            </picture>
+
         </div>
     </div>
 </body>
