--- a/partials/contact-us.html
+++ b/partials/contact-us.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <div class="modal-contact display-one">
-        <button type="button" class="close-button-modal">
+    <div class="modal-contact is-hidden" data-mobile>
+        <button type="button" class="close-button-modal" data-modal-close>
             <svg width="18" height="18" class="icon-x">
                 <use href="../src/images/symbol-defs.svg#icon-x-contact"></use>
             </svg>
@@ -56,5 +56,9 @@
 
         </div>
     </div>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+        <script src="../css/contakt.js"></script>
 </body>
 </html>
