--- a/partials/contact-us.html
+++ b/partials/contact-us.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Anemone page" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Anemone page"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Anemone</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/styles-modal-contact.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="../css/styles-modal-contact.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet"/>
 </head>
 
 <body>
-    <div class="modal-contact is-hidden" data-mobile>
+    <div class="modal-contact is-hidden" data-modal>
         <button type="button" class="close-button-modal" data-modal-close>
             <svg width="18" height="18" class="icon-x">
                 <use href="../src/images/symbol-defs.svg#icon-x-contact"></use>
@@ -56,9 +56,6 @@
 
         </div>
     </div>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-        crossorigin="anonymous"></script>
-        <script src="../css/contakt.js"></script>
+    <script src="../js/contakt.js"></script>
 </body>
 </html>
