--- a/partials/thankyou.html
+++ b/partials/thankyou.html
@@ -3,16 +3,17 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Anemone page"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Anemone page" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anemone</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="../css/styles-modal-contact.css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/styles-modal-contact.css" />
+    <link rel="stylesheet" href="../css/styles-modal-thankyou.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -42,6 +43,26 @@
             </form>
         </div>
     </div>
+    <div class="modal-contact display-two">
+        <button type="button" class="close-button-modal">
+            <svg width="18" height="18" class="icon-x">
+                <use href="../src/images/symbol-defs.svg#icon-x-contact"></use>
+            </svg>
+        </button>
+        <div class="img-thankyou">
+            <picture>
+                <source srcset="../src/images/thankyou-tab.jpg" srcset="../src/images/thankyou-tab.jpg 2x"
+                    media="(min-width: 768px)" />
+                <img src="../src/images/thankyou.jpg" srcset="../src/images/thankyou2x.jpg 2x" alt="orange plants abstraction"
+                    class="delivery-image" />
+            </picture>
+            <h4 class="title-thankyou">Thank you!</h4>
+            <p class="legend-two">We have received your contact details and will reach you soon.</p>
+            <button class="button-send thx" type="submit">Send</button>
+
+        </div>
+    </div>
     <script src="../js/contakt.js"></script>
 </body>
+
 </html>
