--- a/partials/thankyou.html
+++ b/partials/thankyou.html
@@ -52,13 +52,13 @@
         <div class="img-thankyou">
             <picture>
                 <source srcset="../src/images/thankyou-tab.jpg" srcset="../src/images/thankyou-tab.jpg 2x"
-                    media="(min-width: 768px)" />
+                    media="(min-width: 768px)"/>
                 <img src="../src/images/thankyou.jpg" srcset="../src/images/thankyou2x.jpg 2x" alt="orange plants abstraction"
-                    class="delivery-image" />
+                    class="delivery-image"/>
             </picture>
             <h4 class="title-thankyou">Thank you!</h4>
             <p class="legend-two">We have received your contact details and will reach you soon.</p>
-            <button class="button-send thx" type="submit">Send</button>
+            <button class="button-send thx" type="submit">Continue</button>
 
         </div>
     </div>
